css/style.css
/* ... */
@media only screen and (max-width: 767px) {
  .modDefaultSlider .sequence .title h2 {
    font-size: 3.85714rem;
    line-height: 3.85714rem;
  }
  .modDefaultSlider .sequence .small-title h2 {
    font-size: 1.14286rem;
  }

  .modDefaultSlider.advanced .sequence .title h2 {
    letter-spacing: 4px;
    font-size: 3.42857rem;
  }

  .modSectionHeader.big h2 {
    font-size: 3rem;
  }

  .modFullscreenSlider .fullscreen_slideshow h1 {
    font-size: 3.5rem;
    line-height: 3.5rem;
  }
  .modFullscreenSlider .fullscreen_slideshow p {
    font-size: 18px;
  }

  .modBoxedSlider .caption {
    bottom: 20px;
    left: 20px;
  }
  .modBoxedSlider .caption p {
    font-size: 1rem;
  }
  .modBoxedSlider .caption h2 {
    font-size: 1.8rem;
  }
}
@media only screen and (max-width: 480px) {
  .modDefaultSlider .sequence .title h2 {
    font-size: 3.14286rem;
    line-height: 3.14286rem;
  }
  .modDefaultSlider .sequence .small-title h2 {
    font-size: 1rem;
  }

  .modDefaultSlider.advanced .sequence .title h2 {
    letter-spacing: 4px;
    font-size: 2.57143rem;
  }
  .modDefaultSlider.advanced .sequence p {
    font-size: 1.14286rem;
  }

  .modBoxedSlider .caption {
    bottom: 10px;
    left: 10px;
  }
  .modBoxedSlider .caption p {
    font-size: 0.9rem;
  }
  .modBoxedSlider .caption h2 {
    font-size: 1.1rem;
  }

  .modFullscreenSlider .fullscreen_slideshow .right-aligned .block h1, .modFullscreenSlider .fullscreen_slideshow .left-aligned .block h1 {
    margin-bottom: 10px;
  }

  .modFullscreenSlider .fullscreen_slideshow h1 {
    top: 20%;
    font-size: 2rem;
    line-height: 2rem;
  }
  .modFullscreenSlider .fullscreen_slideshow p {
    top: 20%;
    font-size: 14px;
  }
  .modFullscreenSlider .fullscreen_slideshow .buttons-wrapper {
    top: 10%;
  }
  .modFullscreenSlider .fullscreen_slideshow .buttons-wrapper a.button {
    width: 45%;
    font-size: 10px;
  }

  .modSectionHeader.big h2 {
    font-size: 2rem;
  }

  .modFullscreenSlider .fullscreen_slideshow .video_image_touch {
    display: block;
  }
  .modFullscreenSlider .fullscreen_slideshow .video_wrap {
    display: none;
  }
}

html body input.proham {
  display:none;
}

